--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "url": "https://github.com/chiedolabs/eslint-config-node/issues"
   },
   "homepage": "https://github.com/chiedolabs/eslint-config-node#readme",
+  "peerDependencies": {
+    "eslint": "^5.9.0"
+  },
   "dependencies": {
-    "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-mocha": "^5.2.0"
