Move dependencies to peer dependencies

--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
   },
   "homepage": "https://github.com/chiedolabs/eslint-config-node#readme",
   "peerDependencies": {
-    "eslint": "^5.9.0"
-  },
-  "dependencies": {
+    "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-mocha": "^5.2.0"
