Add back peerDependencies
The peer dependecies truly are peer dependencies. They're required in
addition to this npm package. I'm a little confused but I noticed the
Airbnb team listed core packages in both peer and dev dependecies. So I
did that with this commit.

See Airbnb example: https://github.com/airbnb/javascript/blob/master/packages/eslint-config-airbnb/package.json

--- a/package.json
+++ b/package.json
@@ -25,5 +25,11 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-mocha": "^5.2.0"
+  },
+  "peerDependencies": {
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-mocha": "^5.2.0"
   }
 }
